<resources>
    <string name="app_name">calcular_imc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hombre">HOMBRE</string>
    <string name="mujer">MUJER</string>
    <string name="altura">ALTURA</string>
    <string name="peso">PESO</string>
    <string name="edad">EDAD</string>
    <string name="calcular">CALCULAR</string>
    <string name="tu_resultado">Tu Resultado</string>
    <string name="recalcular">RECALCULAR</string>
</resources>